--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "test": "echo \"Test\"",
-    "start": "sass assets/scss/style.scss assets/css/style.css --no-source-map -w"
+    "sass:watch": "sass assets/scss/style.scss assets/css/style.css --no-source-map -w"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
